# w1_therm_reader

./: Cargo.toml  Readme.md
.github/workflows/: publish.yml
assets/: w1_ex.txt  w1_ex2.txt
src/: lib.rs  parser.rs
